# Mortal-backend

./: .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml
apps/system/menus/: models.py  serializers.py
apps/system/menus/migrations/: 0001_initial.py  0002_menu_layout.py  0003_alter_menu_layout.py  0004_menu_keepalive_alter_menu_layout.py  0005_rename_parent_menu_parentid.py
apps/system/roles/migrations/: 0001_initial.py  0002_role_enable.py
apps/system/users/: models.py  serializers.py  tests.py  urls.py  views.py
apps/system/users/migrations/: 0001_initial.py  0002_user_avatar_user_enable_user_genders_user_roles.py  0003_remove_user_genders_user_gender.py  0004_remove_user_roles.py  0005_user_roles.py
mortal/: asgi.py  settings.py  urls.py  wsgi.py
utils/: base_viewset.py  constant.py
